// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`statsOutput statsOutput/auxiliary-files-test should print correct stats for 1`] = `
"PublicPath: auto
asset 2710c5e36f8babb0a3a4.png 7 bytes {909} [emitted] [from: raw.png] (name: main)
asset bundle.js 2.58 KiB {909} [emitted] (name: main)
Entrypoint main 2.58 KiB = bundle.js
chunk {909} bundle.js (main) [entry]
  ./raw.png [193] {909}
    [no exports]
    [no exports used]
    esm import ./raw.png [10]
  ./index.js [10] {909}
    [no exports]
    [no exports used]
    entry ./index
runtime modules 2 modules
./raw.png [193] {909}
  [no exports]
  [no exports used]
  esm import ./raw.png [10]
./index.js [10] {909}
  [no exports]
  [no exports used]
  entry ./index
./stringModule.js [orphan]
  [no exports]
  [module unused]
  esm import ./stringModule [10]
  
Rspack compiled successfully (9bcf52011e342a43887f)"
`;

exports[`statsOutput statsOutput/builtin-swc-loader-parse-error should print correct stats for 1`] = `
"ERROR in ./index.ts
  × Module build failed:
  ├─▶   ×
  │     │   x Expected '{', got 'error'
  │     │    ,-[Xdir/builtin-swc-loader-parse-error/index.ts:1:1]
  │     │  1 | export error;
  │     │    :        ^^^^^
  │     │    \`----
  │     │
  │   
  ╰─▶ Syntax Error
  help: File was processed with this loader: 'builtin:swc-loader??ruleSet[1].rules[0].use[0]'

Rspack compiled with 1 error"
`;

exports[`statsOutput statsOutput/css-concat-error should print correct stats for 1`] = `
"asset main.js 49 bytes [emitted] (name: main)
Entrypoint main 49 bytes = main.js

ERROR in × Resolve error: Can't resolve './src' in 'Xdir/css-concat-error'

Rspack x.x.x compiled with 1 error in X s"
`;

exports[`statsOutput statsOutput/filename should print correct stats for 1`] = `
"asset 521.xxxx.js 337 bytes [emitted]
asset 909.xxxx.js 8.78 KiB [emitted] (name: main)
Entrypoint main 8.78 KiB = 909.xxxx.js
runtime modules 11 modules
./index.js
./dynamic.js
Rspack x.x.x compiled successfully in X s"
`;

exports[`statsOutput statsOutput/hot+production should print correct stats for 1`] = `
"asset main.js 32.3 KiB [emitted] (name: main)
Entrypoint main 32.3 KiB = main.js
runtime modules 11 modules
./index.js
Rspack x.x.x compiled successfully in X s"
`;

exports[`statsOutput statsOutput/ignore-plugin should print correct stats for 1`] = `
"runtime modules 1 module
./index.js
./locals/en.js
Xdir/ignore-plugin/locals|sync|/^\\\\.\\\\/.*$/"
`;

exports[`statsOutput statsOutput/ignore-warning should print correct stats for 1`] = `"Rspack compiled successfully"`;

exports[`statsOutput statsOutput/issue-3558 should print correct stats for 1`] = `"Rspack compiled successfully"`;

exports[`statsOutput statsOutput/legacy-ie-css-warning should print correct stats for 1`] = `"Rspack compiled successfully"`;

exports[`statsOutput statsOutput/let-keyword-as-variable-name-error should print correct stats for 1`] = `
"ERROR in ./index.js
  × Module parse failed:
  ╰─▶   × JavaScript parsing error: \`let\` cannot be used as an identifier in strict mode
         ╭────
       1 │ let let = let;
         ·           ───
         ╰────
      
  help: 
        You may need an appropriate loader to handle this file type.

ERROR in ./index.js
  × Module parse failed:
  ╰─▶   × JavaScript parsing error: \`let\` cannot be used as an identifier in strict mode
         ╭────
       1 │ let let = let;
         ·     ───
         ╰────
      
  help: 
        You may need an appropriate loader to handle this file type.

Rspack compiled with 2 errors"
`;

exports[`statsOutput statsOutput/limit-chunk-count-plugin should print correct stats for 1`] = `
"1 chunks:
  asset bundle1.js 3.69 KiB [emitted] (name: main)
  Entrypoint main 3.69 KiB = bundle1.js
  chunk bundle1.js (main) <{909}> >{909}< [entry]
    ./b.js
    ./c.js
    ./d.js
    ./e.js
    ./index.js
  1 chunks (Rspack x.x.x) compiled successfully in X s

2 chunks:
  asset 76.bundle2.js 497 bytes [emitted] (name: c)
  asset bundle2.js 10.3 KiB [emitted] (name: main)
  Entrypoint main 10.3 KiB = bundle2.js
  chunk 76.bundle2.js (c) <{76}> <{909}> >{76}<
    ./c.js
    ./d.js
    ./e.js
  chunk bundle2.js (main) >{76}< [entry]
    ./b.js
    ./index.js
  2 chunks (Rspack x.x.x) compiled successfully in X s

3 chunks:
  asset 345.bundle3.js 186 bytes [emitted]
  asset 76.bundle3.js 387 bytes [emitted] (name: c)
  asset bundle3.js 10.3 KiB [emitted] (name: main)
  Entrypoint main 10.3 KiB = bundle3.js
  chunk 345.bundle3.js <{76}>
    ./d.js
    ./e.js
  chunk 76.bundle3.js (c) <{909}> >{345}<
    ./c.js
  chunk bundle3.js (main) >{76}< [entry]
    ./b.js
    ./index.js
  3 chunks (Rspack x.x.x) compiled successfully in X s

4 chunks:
  asset 697.bundle4.js 130 bytes [emitted]
  asset 753.bundle4.js 130 bytes [emitted]
  asset 76.bundle4.js 387 bytes [emitted] (name: c)
  asset bundle4.js 10.3 KiB [emitted] (name: main)
  Entrypoint main 10.3 KiB = bundle4.js
  chunk 697.bundle4.js <{76}>
    ./e.js
  chunk 753.bundle4.js <{76}>
    ./d.js
  chunk 76.bundle4.js (c) <{909}> >{697}< >{753}<
    ./c.js
  chunk bundle4.js (main) >{76}< [entry]
    ./b.js
    ./index.js
  4 chunks (Rspack x.x.x) compiled successfully in X s"
`;

exports[`statsOutput statsOutput/logging-loader should print correct stats for 1`] = `""`;

exports[`statsOutput statsOutput/minify-error should print correct stats for 1`] = `
"ERROR in × JavaScript parsing error: Expected a semicolon
   ╭─[1:1]
 1 │ const a {}
   ·         ─
 2 │ (() => { // webpackBootstrap
 3 │ var __webpack_exports__ = {};
   ╰────

Rspack compiled with 1 error"
`;

exports[`statsOutput statsOutput/named-chunk-group should print correct stats for 1`] = `
"Entrypoint main 8.77 KiB = main.js
Chunk Group cimanyd 337 bytes = cimanyd.js"
`;

exports[`statsOutput statsOutput/nonexistent-import-source-error should print correct stats for 1`] = `
"ERROR in ./index.js
  × Resolve error: Can't resolve 'not-exist' in 'Xdir/nonexistent-import-source-error'
   ╭────
 1 │ import \\"not-exist\\";
   ·        ───────────
   ╰────

Rspack compiled with 1 error"
`;

exports[`statsOutput statsOutput/optimization-chunk-ids-natural should print correct stats for 1`] = `
"Entrypoint e1 10.4 KiB = e1.js
Entrypoint e2 10.3 KiB = e2.js
chunk 0.js
chunk 1.js
chunk 2.js
chunk e1.js (e1) [entry]
chunk e2.js (e2) [entry]"
`;

exports[`statsOutput statsOutput/optimization-runtime-chunk should print correct stats for 1`] = `
"Entrypoint e1 4.01 KiB = e1~runtime.js 3.68 KiB e1.js 338 bytes
Entrypoint e2 4.01 KiB = e2~runtime.js 3.68 KiB e2.js 338 bytes
chunk e1.js (e1) [entry]
chunk e1~runtime.js (e1~runtime) [initial]
chunk e2.js (e2) [entry]
chunk e2~runtime.js (e2~runtime) [initial]"
`;

exports[`statsOutput statsOutput/optimization-runtime-chunk-multiple should print correct stats for 1`] = `
"Entrypoint e1 4.01 KiB = runtime~e1.js 3.68 KiB e1.js 338 bytes
Entrypoint e2 4.01 KiB = runtime~e2.js 3.68 KiB e2.js 338 bytes
chunk e1.js (e1) [entry]
chunk e2.js (e2) [entry]
chunk runtime~e1.js (runtime~e1) [initial]
chunk runtime~e2.js (runtime~e2) [initial]"
`;

exports[`statsOutput statsOutput/optimization-runtime-chunk-single should print correct stats for 1`] = `
"Entrypoint e1 4.01 KiB = runtime.js 3.68 KiB e1.js 338 bytes
Entrypoint e2 4.01 KiB = runtime.js 3.68 KiB e2.js 338 bytes
chunk e1.js (e1) [entry]
chunk e2.js (e2) [entry]
chunk runtime.js (runtime) [initial]"
`;

exports[`statsOutput statsOutput/optimization-runtime-chunk-true should print correct stats for 1`] = `
"Entrypoint e1 4.01 KiB = runtime~e1.js 3.68 KiB e1.js 338 bytes
Entrypoint e2 4.01 KiB = runtime~e2.js 3.68 KiB e2.js 338 bytes
chunk e1.js (e1) [entry]
chunk e2.js (e2) [entry]
chunk runtime~e1.js (runtime~e1) [initial]
chunk runtime~e2.js (runtime~e2) [initial]"
`;

exports[`statsOutput statsOutput/parse-error should print correct stats for 1`] = `
"ERROR in ./b.js
  × Module parse failed:
  ╰─▶   × JavaScript parsing error: Expected ';', '}' or <eof>
         ╭─[4:1]
       4 │ includes
       5 │ a
       6 │ parser )
         ·        ─
       7 │ error
       8 │ in
         ╰────
      
  help: 
        You may need an appropriate loader to handle this file type.

Rspack compiled with 1 error"
`;

exports[`statsOutput statsOutput/performance-disabled should print correct stats for 1`] = `
"asset 697.js 130 bytes [emitted]
asset 753.js 130 bytes [emitted]
asset main.js 303 KiB [emitted] (name: main)
Entrypoint main 303 KiB = main.js
runtime modules 12 modules
./a.js
./b.js
./c.js
./d.js
./e.js
./index.js
Rspack x.x.x compiled successfully in X s"
`;

exports[`statsOutput statsOutput/performance-error should print correct stats for 1`] = `
"asset 697.js 130 bytes [emitted]
asset 753.js 130 bytes [emitted]
asset main.js 303 KiB [emitted] (name: main)
Entrypoint main 303 KiB = main.js
runtime modules 12 modules
./a.js
./b.js
./c.js
./d.js
./e.js
./index.js

ERROR in × asset size limit: The following asset(s) exceed the recommended size limit (244.141 KiB). This can impact web performance.Assets:
  │   main.js (303.479 KiB)


ERROR in × entrypoint size limit: The following entrypoint(s) combined asset size exceeds the recommended limit (244.141 KiB). This can impact web performance.Entrypoints:
  │   main (303.479 KiB)
  │       main.js


Rspack x.x.x compiled with 2 errors in X s"
`;

exports[`statsOutput statsOutput/performance-no-hints should print correct stats for 1`] = `
"asset 697.js 130 bytes [emitted]
asset 753.js 130 bytes [emitted]
asset main.js 303 KiB [emitted] (name: main)
Entrypoint main 303 KiB = main.js
runtime modules 12 modules
./a.js
./b.js
./c.js
./d.js
./e.js
./index.js
Rspack x.x.x compiled successfully in X s"
`;

exports[`statsOutput statsOutput/prefetch-preload-mixed should print correct stats for 1`] = `
"chunk a1.js (a1) <{74}>
chunk c2.js (c2) <{76}>
chunk c1.js (c1) <{76}>
chunk b3.js (b3) <{751}>
chunk b2.js (b2) <{751}>
chunk a.js (a) <{909}> >{330}< >{740}< (prefetch: {330} {740})
chunk a2.js (a2) <{74}>
chunk b.js (b) <{909}> >{438}< >{439}< >{826}< (prefetch: {826} {438}) (preload: {439})
chunk c.js (c) <{909}> >{380}< >{433}< (preload: {433} {380})
chunk b1.js (b1) <{751}>
chunk main.js (main) >{74}< >{751}< >{76}< (prefetch: {74} {751} {76}) [entry]"
`;

exports[`statsOutput statsOutput/reasons should print correct stats for 1`] = `
"./a.js
  cjs self exports reference self
  cjs require ./a
./index.js
  entry ./index"
`;

exports[`statsOutput statsOutput/resolve-overflow-error should print correct stats for 1`] = `
"asset main.js 378 bytes [emitted] (name: main)
Entrypoint main 378 bytes = main.js
./index.js

ERROR in ./index.js
  × Resolve error: Can't resolve 'cycle-alias/a' in 'Xdir/resolve-overflow-error'
   ╭─[1:1]
 1 │ import { a } from \\"cycle-alias/a\\";
   ·                   ───────────────
 2 │ console.log(a);
   ╰────
  help: maybe it had cyclic aliases

Rspack x.x.x compiled with 1 error in X s"
`;

exports[`statsOutput statsOutput/resolve-unexpected-exports-in-pkg-error should print correct stats for 1`] = `
"asset bundle.js 945 bytes [emitted] (name: main)
Entrypoint main 945 bytes = bundle.js
runtime modules 1 module
./index.js

ERROR in ./index.js
  × Invalid \\"exports\\" target \\"../../index.js\\" defined for '.' in the package config Xdir/resolve-unexpected-exports-in-pkg-error/node_modules/pkg-a/package.json

Rspack x.x.x compiled with 1 error in X s"
`;

exports[`statsOutput statsOutput/runtime-modules should print correct stats for 1`] = `
"./index.js
webpack/runtime/has_own_property
webpack/runtime/make_namespace_object
webpack/runtime/define_property_getters"
`;

exports[`statsOutput statsOutput/runtime-specific-exports should print correct stats for 1`] = `
"asset main.js 1.8 KiB [emitted] (name: main)
Entrypoint main 1.8 KiB = main.js
./math.js
  [exports: add, multiply]
  [only some exports used: add]
./example.js
  [no exports]
  [no exports used]
./increment.js
  [exports: decrement, increment, incrementBy2]
  [only some exports used: increment]
Rspack x.x.x compiled successfully in X s"
`;

exports[`statsOutput statsOutput/side-effects-bailouts should print correct stats for 1`] = `
"asset main.js 1.86 KiB {909} [emitted] (name: main)
Entrypoint main 1.86 KiB = main.js
chunk {909} main.js (main) [entry]
runtime modules 2 modules
./lib.js [467] {909}
  [exports: test]
  [all exports used]
  Statement with side_effects in source code at ./lib.js:5:0-9
  esm import ./lib.js [10]
  esm import specifier ./lib.js [10]
./index.js [10] {909}
  [no exports]
  [no exports used]
  entry ./index.js
  
Rspack x.x.x compiled successfully in X s"
`;

exports[`statsOutput statsOutput/simple-export should print correct stats for 1`] = `
"asset bundle.js 1.25 KiB [emitted] (name: main)
Entrypoint main 1.25 KiB = bundle.js
runtime modules 3 modules
./index.js
Rspack x.x.x compiled successfully in X s"
`;

exports[`statsOutput statsOutput/simple-module-source should print correct stats for 1`] = `
"asset bundle.js 2.1 KiB [emitted] (name: main)
Entrypoint main 2.1 KiB = bundle.js
runtime modules 3 modules
orphan modules [orphan] 1 module
./raw.png
./index.js
Rspack compiled successfully"
`;

exports[`statsOutput statsOutput/stats-hooks should print correct stats for 1`] = `
"asset main.js 99 bytes [emitted111] (name: main) [testA: aaaaaa]
Entrypoint main 99 bytes = main.js
./index.js
Rspack compiled successfully"
`;

exports[`statsOutput statsOutput/try-require-module should print correct stats for 1`] = `
"WARNING in ./index.js
  ⚠ Resolve error: Can't resolve './missing-module' in 'Xdir/try-require-module'
   ╭─[1:1]
 1 │ try {
 2 │     require('./missing-module')
   ·     ───────────────────────────
 3 │ } catch (e) {
 4 │ 
   ╰────

Rspack compiled with 1 warning"
`;

exports[`statsOutput statsOutput/try-require-resolve-module should print correct stats for 1`] = `
"WARNING in ./index.js
  ⚠ Resolve error: Can't resolve './missing-module' in 'Xdir/try-require-resolve-module'
   ╭─[1:1]
 1 │ try {
 2 │     require.resolve('./missing-module')
   ·     ───────────────────────────────────
 3 │ } catch (e) {
 4 │ 
   ╰────

Rspack compiled with 1 warning"
`;

exports[`statsOutput statsOutput/try-require-resolve-weak-module should print correct stats for 1`] = `
"WARNING in ./index.js
  ⚠ Resolve error: Can't resolve './missing-module' in 'Xdir/try-require-resolve-weak-module'
   ╭─[1:1]
 1 │ try {
 2 │     require.resolveWeak('./missing-module')
   ·     ───────────────────────────────────────
 3 │ } catch (e) {
 4 │ 
   ╰────

Rspack compiled with 1 warning"
`;
